kustomize/base/be-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    service: echo-spring-backend
    app: echo-spring-backend
  name: echo-spring-backend
  namespace: backend
spec:
  selector:
    matchLabels:
      service: echo-spring-backend
      app: echo-spring-backend
  strategy: {}
  template:
    metadata:
      labels:
        service: echo-spring-backend
        app: echo-spring-backend
    spec:
      containers:
      - image: victorpupim/echo-spring-backend:latest
        name: echo-spring-backend
        resources:
          requests:
            memory: "2Gi"
            cpu: "2.0"
          limits:
            memory: "3.5Gi"
            cpu: "3.5"
status: {}
