kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: echo-spring
    app: echo-spring
  name: echo-spring
  namespace: web
spec:
  selector:
    matchLabels:
      service: echo-spring
      app: echo-spring
  strategy: {}
  template:
    metadata:
      labels:
        service: echo-spring
        app: echo-spring
    spec:
      containers:
      - image: victorpupim/echo-spring:latest
        name: echo-spring
