kustomize/base/be-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: echo-spring-backend
    app: echo-spring-backend
  name: echo-spring-backend
  namespace: backend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    service: echo-spring-backend
    app: echo-spring-backend
  type: NodePort
status:
  loadBalancer: {}
