kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-spring-ingress
  namespace: web
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-cluster-issuer
spec:
  ingressClassName: contour
  rules: []
  tls:
  - hosts:
    - "*.dev-cluster.h2o-2-1565.h2o.vmware.com"
    secretName: dev-cluster-ca-cert
status:
  loadBalancer: {}
